--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3><i class="fas fa-heart"></i> 关于这个网站</h3>
-                <p>这是一个特别为 <span class="highlight-name">土鸡蛋</span> 制作的元旦祝福网站，希望你喜欢！</p>
+                <p>这是一个特别为 <span class="highlight-name">土鸡蛋</span> 制作的元旦祝福网站，希望你喜欢！请放心相信本人的喜欢</p>
             </div>
             <div class="footer-section">
                 <h3><i class="fas fa-link"></i> 快速链接</h3>
@@ -245,12 +245,12 @@
             </div>
             <div class="footer-section">
                 <h3><i class="fas fa-info-circle"></i> 网站信息</h3>
-                <p>创建时间：2024年元旦</p>
+                <p>创建时间：2025年元旦</p>
                 <p>最后更新：<span id="lastUpdate">今天</span></p>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>© 2024 元旦特别版 | 专为 <span class="highlight-name">土鸡蛋</span> 制作</p>
+            <p>© 2025 元旦特别版 | 专为 <span class="highlight-name">土鸡蛋</span> 制作</p>
             <p class="footer-note">
                 <i class="fas fa-heart"></i> 愿你有一个美好的新年 <i class="fas fa-heart"></i>
             </p>
